--- a/fixture.html
+++ b/fixture.html
@@ -60,38 +60,14 @@
         <div class="clx"></div>
             <div class="btn-gr-stage w-100 flex">
                 <ul class="gr-stage w-100 flex">
-                    <li><a href="">Vòng bảng lượt 1</a> </li>
+                    <li><a class="click-activ" href="">Vòng bảng lượt 1</a> </li>
                     <li><a href="">Vòng bảng lượt 2</a> </li>
                     <li><a href="">Vòng bảng lượt 3</a> </li>
                     <li><a href="">Vòng loại trực tiếp</a>  </li>
                 </ul>
             </div>
-            <div class="gr-matches-main w-100 flex">
-                <!-- <div class="gr-matches w-100 flex">
-                    <div class="day"></div>
-                    <a class="gr-matches-detail" href="#">
-                        <div class="gr-matches-detail-col-1">
-                            <span class="group"></span>
-                            <span class="stadium"> </span>
-                        </div>
-                        <div class="gr-matches-detail-col-2">
-                            <div class="gr-team flex">  
-                                <img  class="fl" src="">
-                                <div class="name"></div>
-                            </div>
-                            <div class="gr-matches-score">
-
-                            </div>
-                            <div class="gr-team flex">  
-                                <img  class="fl" src="">
-                                <div class="name"></div>
-                            </div>
-                        </div>
-                        <div class="gr-matches-detail-col-1">
-                            
-                        </div>
-                    </a>
-                </div> -->
+            <div class="gr-matches-main w-100">
+                
             </div>
         <div class="footer">
             <div class="footer-head width-ft">
